xi2: fix thinko in variable type

https://bugzilla.gnome.org/show_bug.cgi?id=673644